infra/configs/traefik-dashboard.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-api
  namespace: traefik
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/instance: traefik-default
  ports:
  - port: 8080
    name: traefik
    targetPort: 8080
    protocol: TCP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tarefik-api
  namespace: traefik
spec:
  hostnames:
    - traefik.nikuber.com
  parentRefs:
    - namespace: traefik
      name: traefik
      sectionName: https-subdomain
  rules:
    - backendRefs:
        - name: traefik-api
          port: 8080
